--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,6 @@
-#plugins:
-#  - jekyll-relative-links
-theme: cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 relative_links:
   enabled: true
   collections: true
